# HTS-Classifier

./: .gitignore  DEPLOYMENT.md  README.md  app.py  package-lock.json  requirements.txt
backend/: .env.example  .gitignore  Procfile  README.md  alembic.ini  app.py  check_index.py  deploy.sh  populate_index.py  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: __init__.py  batch_classify.py  commodity_rag_search.py  csv_updater.py  embed_and_upload.py  enrich_descriptions.py  hts_search.py  local_rag_search.py  pdf_parser.py  report_generator.py  simple_csv_search.py  transformer.py
backend/src/hts_oracle/: __init__.py  config.py  db.py  main.py  middleware.py
backend/src/hts_oracle/cli/: __init__.py  import_hts.py
backend/src/hts_oracle/models/: __init__.py  batch_job.py  classification.py  hts_code.py
backend/src/hts_oracle/routes/: __init__.py  admin.py  batch.py  classify.py  health.py
backend/src/hts_oracle/schemas/: __init__.py  batch.py  classify.py
backend/src/hts_oracle/services/: __init__.py  batch_classifier.py  classifier.py  embedder.py  pdf_parser.py  searcher.py
backend/tests/: conftest.py  test_embedder.py  test_searcher.py
data/: hts_2025_revision_13.csv
frontend/: .env.development  .env.example  .env.production  .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  playwright.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  App_backup.jsx  index.css  main.tsx
frontend/src/api/: batch.ts  client.ts  hooks.ts
frontend/src/components/: AccessibilityControls.jsx  BreadcrumbNav.jsx
frontend/src/components/batch/: ProgressTable.tsx  UploadZone.tsx
frontend/src/components/chat/: ChatInput.jsx  ChatMessage.jsx
frontend/src/components/layout/: AppShell.tsx  Header.jsx  Header.tsx  MainLayout.jsx
frontend/src/components/results/: BatchResultsView.jsx  ResultCard.jsx  ResultCard.tsx  ResultsContainer.jsx  ResultsList.tsx
frontend/src/components/search/: RefinementPanel.tsx  SearchBar.tsx  SearchForm.jsx
frontend/src/components/shared/: AccessibilityProvider.jsx  ContextualHelp.jsx  EmptyStates.jsx  LoadingStates.jsx
frontend/src/components/ui/: collapsible.tsx  tooltip.tsx
frontend/src/components/upload/: PdfUploadZone.jsx
frontend/src/lib/: utils.ts
frontend/src/pages/: AdminPage.jsx  AdminPage.tsx  BatchPage.tsx  SearchPage.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: pdfExport.js
frontend/tests/: README.md  accessibility.spec.js  basic.spec.js  e2e-classification.spec.js
src/: constants.py  csv_hts_loader.py  langgraph_hts_agent.py  product_classifier.py  question_generator.py  search_engine.py
